Add external datastores support

--- a/stable/sentry/templates/secrets.yaml
+++ b/stable/sentry/templates/secrets.yaml
@@ -20,3 +20,9 @@ data:
   {{ else }}
   user-password: {{ randAlphaNum 16 | b64enc | quote }}
   {{ end }}
+  {{ if not .Values.postgresql.enabled }}
+  postgres-password: {{ .Values.postgresql.password | default "" | b64enc | quote }}
+  {{ end }}
+  {{ if not .Values.redis.enabled }}
+  redis-password: {{ .Values.redis.password | default "" | b64enc | quote }}
+  {{ end }}
