--- a/stable/sentry/templates/workers-deployment.yaml
+++ b/stable/sentry/templates/workers-deployment.yaml
@@ -53,35 +53,27 @@ spec:
               name: {{ template "fullname" . }}
               key: sentry-secret
         - name: SENTRY_DB_USER
-          value: {{ default "sentry" .Values.postgresUser | quote }}
+          value: {{ default "sentry" .Values.postgresql.user | quote }}
         - name: SENTRY_DB_NAME
-          value: {{ default "sentry" .Values.postgresDatabase | quote }}
+          value: {{ default "sentry" .Values.postgresql.name | quote }}
         - name: SENTRY_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-            {{- if .Values.postgresql.existingSecret }}
-              name: {{ .Values.postgresql.existingSecret }}
-            {{- else }}
-              name: {{ template "postgresql.fullname" . }}
-            {{- end }}
+              name: {{ template "fullname" . }}
               key: postgres-password
         - name: SENTRY_POSTGRES_HOST
-          value: {{ template "postgresql.fullname" . }}
+          value: {{ template "postgresql.host" . }}
         - name: SENTRY_POSTGRES_PORT
-          value: "5432"
+          value: {{ template "postgresql.port" . }}
         - name: SENTRY_REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
-            {{- if .Values.redis.existingSecret }}
-              name: {{ .Values.redis.existingSecret }}
-            {{- else }}
-              name: {{ template "redis.fullname" . }}
-            {{- end }}
+              name: {{ template "fullname" . }}
               key: redis-password
         - name: SENTRY_REDIS_HOST
-          value: {{ template "redis.fullname" . }}-master
+          value: {{ template "redis.host" . }}
         - name: SENTRY_REDIS_PORT
-          value: "6379"
+          value: {{ template "redis.port" . }}
         - name: SENTRY_EMAIL_HOST
           value: {{ default "" .Values.email.host | quote }}
         - name: SENTRY_EMAIL_PORT
