--- a/incubator/graylog/values.yaml
+++ b/incubator/graylog/values.yaml
@@ -86,6 +86,8 @@ graylog:
        url: https://github.com/omise/graylog-plugin-function-check-diff/releases/download/1.0.0/graylog-plugin-function-check-diff-1.0.0.jar
      - name: graylog-plugin-custom-alert-condition-1.0.0.jar
        url: https://github.com/omise/graylog-plugin-custom-alert-condition/releases/download/v1.0.0/graylog-plugin-custom-alert-condition-1.0.0.jar
+     - name: graylog-plugin-auth-sso-2.5.0.jar
+       url: https://github.com/Graylog2/graylog-plugin-auth-sso/releases/download/2.5.0/graylog-plugin-auth-sso-2.5.0.jar
 
   ## A service for Graylog web interface
   service:
