Updated rest_listen_uri, rest_transport_uri, web_listen_uri and web_endpoint_uri

--- a/incubator/graylog/templates/configmap.yaml
+++ b/incubator/graylog/templates/configmap.yaml
@@ -88,12 +88,17 @@ data:
     node_id_file = /usr/share/graylog/data/journal/node-id
     root_username = {{ .Values.graylog.rootUsername }}
     root_email = {{ .Values.graylog.rootEmail }}
+    email_port = 465
+    email_tls = true
+    email_hostname = email-smtp.us-west-2.amazonaws.com
+    email_transport = true
     root_timezone = {{ default "UTC" .Values.graylog.rootTimezone }}
     plugin_dir = /usr/share/graylog/plugin
-    rest_listen_uri =   http://0.0.0.0:9000/api/
-    rest_transport_uri = http://graylog-uswest2-development.infrastructure.volvo.care:9000/api/
-    web_listen_uri = http://0.0.0.0:9000/
-    web_endpoint_uri =  http://graylog-uswest2-development.infrastructure.volvo.care{{- if not .Values.graylog.ingress.enabled }}:31444{{- end }}/api/
+    rest_listen_uri =   https://0.0.0.0:9000/api/
+    rest_transport_uri = https://graylog-uswest2-development.infrastructure.volvo.care/api/
+    web_listen_uri = https://0.0.0.0:9000/
+    web_endpoint_uri =  https://graylog-uswest2-development.infrastructure.volvo.care{{- if not .Values.graylog.ingress.enabled }}:31444{{- end }}/api/
+    trusted_proxies = 172.0.0.0/32, ::1/128
     elasticsearch_hosts = {{ template "graylog.elasticsearch.hosts" . }}
     elasticsearch_connect_timeout = 10s
     elasticsearch_socket_timeout = 60s
