--- a/incubator/graylog/values.yaml
+++ b/incubator/graylog/values.yaml
@@ -80,18 +80,20 @@ graylog:
 
   ## Additional plugins you need to install on Graylog.
   plugins:
-     - name: graylog-plugin-slack-2.7.1.jar
-       url: https://github.com/omise/graylog-plugin-slack/releases/download/2.7.1/graylog-plugin-slack-2.7.1.jar
+     - name: graylog-plugin-slack-3.0.0.jar
+       url: https://github.com/graylog-labs/graylog-plugin-slack/releases/download/3.0.0/graylog-plugin-slack-3.0.0.jar
      - name: graylog-plugin-function-check-diff-1.0.0.jar
        url: https://github.com/omise/graylog-plugin-function-check-diff/releases/download/1.0.0/graylog-plugin-function-check-diff-1.0.0.jar
      - name: graylog-plugin-custom-alert-condition-1.0.0.jar
        url: https://github.com/omise/graylog-plugin-custom-alert-condition/releases/download/v1.0.0/graylog-plugin-custom-alert-condition-1.0.0.jar
      - name: graylog-plugin-auth-sso-2.5.0.jar
        url: https://github.com/Graylog2/graylog-plugin-auth-sso/releases/download/2.5.0/graylog-plugin-auth-sso-2.5.0.jar
+     - name: graylog-plugin-internal-logs-2.4.0.jar
+       url: https://github.com/graylog-labs/graylog-plugin-internal-logs/releases/download/2.4.0/graylog-plugin-internal-logs-2.4.0.jar
 
   ## A service for Graylog web interface
   service:
-    port: 9000
+  #  port: 9000
     type: ClusterIP
 
 
@@ -114,13 +116,15 @@ graylog:
        ports:
          - name: syslog
            port: 12222
+           protocol: UDP
+           port: 20514
 
 
   ingress:
      ## If true, Graylog server Ingress will be created
      ##
      enabled: true
-     port: 9000
+  #   port: 9000
      ## Graylog server Ingress annotations
      ##
      annotations:
@@ -135,10 +139,10 @@ graylog:
     ## Graylog server Ingress TLS configuration
     ## Secrets must be manually created in the namespace
     ##
-     tls: []
-    #   - secretName: volvo-care-infrastructure-tls
-    #     hosts:
-    #       - graylog-uswest2-development.infrastructure.volvo.care
+     tls:
+       - secretName: volvo-care-infrastructure-tls
+         hosts:
+           - graylog-uswest2-development.infrastructure.volvo.care
 
 
   ## Configure resource requests and limits
@@ -164,7 +168,7 @@ graylog:
   metrics:
     ## If true, prometheus annotations will not be attached
     ##
-    enabled: false
+    enabled: true
 
   geoip:
     ## If true, Maxmind GeoLite2 will be download to /etc/geoip/GeoLite2-City.mmdb
@@ -183,6 +187,7 @@ graylog:
   ## Graylog root email
   ##
   rootEmail: ""
+
 
   ## Graylog root timezone
   ##
