[stable/spinnaker] Use "tpl" function to render the content of additional scripts and configs
This allows to use variable interpolation in the body of additional script and config files.

Signed-off-by: Mikhail Zholobov <legal90@gmail.com>

--- a/stable/spinnaker/templates/configmap/additional-configmaps.yaml
+++ b/stable/spinnaker/templates/configmap/additional-configmaps.yaml
@@ -9,7 +9,7 @@ data:
 {{- if  and .Values.halyard.additionalConfigMaps.create .Values.halyard.additionalConfigMaps.data }}
 {{- range $index, $content := .Values.halyard.additionalConfigMaps.data }}
   {{ $index }}: |-
-{{ $content | indent 4 }}
+{{ tpl $content $ | indent 4 }}
 {{- end }}
 {{- end }}
 {{- end }}
