--- a/stable/spinnaker/templates/configmap/additional-profile-configmaps.yaml
+++ b/stable/spinnaker/templates/configmap/additional-profile-configmaps.yaml
@@ -9,7 +9,7 @@ data:
 {{- if  and .Values.halyard.additionalProfileConfigMaps.create .Values.halyard.additionalProfileConfigMaps.data }}
 {{- range $index, $content := .Values.halyard.additionalProfileConfigMaps.data }}
   {{ $index }}: |-
-{{ $content | indent 4 }}
+{{ tpl $content $ | indent 4 }}
 {{- end }}
 {{- end }}
 {{- end }}
