--- a/stable/spinnaker/templates/secrets/additional-secrets.yaml
+++ b/stable/spinnaker/templates/secrets/additional-secrets.yaml
@@ -9,7 +9,7 @@ data:
 {{- if  and .Values.halyard.additionalSecrets.create .Values.halyard.additionalSecrets.data }}
 {{- range $index, $content := .Values.halyard.additionalSecrets.data }}
   {{ $index }}: |-
-{{ $content | indent 4 }}
+{{ tpl $content $ | indent 4 }}
 {{- end }}
 {{- end }}
 {{- end }}
