[stable/spinnaker] Add a value for customizing service settings
Using the newly added `additionalServiceSettings` value it's possible to override service-specific
parameters, which could not be done the custom profile.
For example, that might be used to override the version of some components.
Read more: https://www.spinnaker.io/reference/halyard/custom/#custom-service-settings

Signed-off-by: Mikhail Zholobov <legal90@gmail.com>

--- a/stable/spinnaker/templates/configmap/service-settings.yaml
+++ b/stable/spinnaker/templates/configmap/service-settings.yaml
@@ -6,7 +6,6 @@ metadata:
 {{ include "spinnaker.standard-labels" . | indent 4 }}
 data:
   redis.yml: |-
-
     {{- if .Values.redis.enabled }}
     overrideBaseUrl: redis://:{{ .Values.redis.password }}@{{ .Release.Name }}-redis-master:6379
     {{- else }}
@@ -17,12 +16,20 @@ data:
     {{- end }}
     {{- end }}
     skipLifeCycleManagement: true
+    {{- if .Values.halyard.additionalServiceSettings.redis }}
+{{ tpl .Values.halyard.additionalServiceSettings.redis . | indent 4 }}
+    {{- end }}
+
   gate.yml: |-
     kubernetes:
     {{- if .Values.ingress.enabled }}
       useExecHealthCheck: false
       serviceType: NodePort
     {{- end }}
+    {{- if .Values.halyard.additionalServiceSettings.gate }}
+{{ tpl .Values.halyard.additionalServiceSettings.gate . | indent 4 }}
+    {{- end }}
+
   deck.yml: |-
     env:
       API_HOST: http://spin-gate.{{ .Release.Namespace }}:8084
@@ -30,4 +37,7 @@ data:
     {{- if .Values.ingress.enabled }}
       useExecHealthCheck: false
       serviceType: NodePort
+    {{- end }}
+    {{- if .Values.halyard.additionalServiceSettings.deck }}
+{{ tpl .Values.halyard.additionalServiceSettings.deck . | indent 4 }}
     {{- end }}
