[stable/spinnaker] Allow to use existing additionalConfigMaps objects
That makes it working similar to "additionalSecrets" part. The user can define
"halyard.additionalConfigMaps.name" with the name of pre-created ConfigMap
(which is not managed by this helm chart) and it will be mounted to the halyard pod.

Signed-off-by: Mikhail Zholobov <legal90@gmail.com>

--- a/stable/spinnaker/values.yaml
+++ b/stable/spinnaker/values.yaml
@@ -20,6 +20,8 @@ halyard:
   additionalConfigMaps:
     create: false
     data: {}
+    ## Uncomment if you want to use a pre-created ConfigMap rather than feeding data in via helm.
+    # name:
   additionalProfileConfigMaps:
     create: false
     data:
