--- a/stable/spinnaker/templates/statefulsets/halyard.yaml
+++ b/stable/spinnaker/templates/statefulsets/halyard.yaml
@@ -84,10 +84,14 @@ spec:
           secretName: {{ .Values.halyard.additionalSecrets.name }}
         {{- end }}
       {{- end }}
-      {{- if .Values.halyard.additionalConfigMaps.create }}
+      {{- if or .Values.halyard.additionalConfigMaps.create (hasKey .Values.halyard.additionalConfigMaps "name") }}
       - name: additional-config-maps
         configMap:
+        {{- if .Values.halyard.additionalConfigMaps.create }}
           name: {{ template "spinnaker.fullname" . }}-additional-config-maps
+        {{- else if .Values.halyard.additionalConfigMaps.name }}
+          name: {{ .Values.halyard.additionalConfigMaps.name }}
+        {{- end }}
       {{- end }}
       {{- if .Values.halyard.additionalProfileConfigMaps.create }}
       - name: additional-profile-config-maps
@@ -125,7 +129,7 @@ spec:
         - name: additional-secrets
           mountPath: /opt/halyard/additionalSecrets
         {{- end }}
-        {{- if .Values.halyard.additionalConfigMaps.create }}
+        {{- if or .Values.halyard.additionalConfigMaps.create (hasKey .Values.halyard.additionalConfigMaps "name") }}
         - name: additional-config-maps
           mountPath: /opt/halyard/additionalConfigMaps
         {{- end }}
